# BrainNowTfa

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  install-qt.sh  patient orinigal data.xlsx  preload-ubuntu.cmake  preload-windows.cmake  test data.xls  test.xlsx
.circleci/: config.yml
config/: miniconda-installer-noniteractive.bat  qt-installer-noninteractive.qs
src/: BnMainWindow.cpp  BnMainWindow.h  BnMainWindow.ui  CMakeLists.txt  main.cpp
src/ExcelLib/: CMakeLists.txt  ExcelHelper.cpp  ExcelHelper.h  main.cpp
src/py/: README.md  __main__.py  setup.py  test.py  tfa.spec  tfa_one_file.spec
src/py/core/: Tfa.py  __init__.py  bb.py  core.py  test.py
src/py/tfa/: __init__.py  __main__.py  cli.py
src/py/tfa/core/: ari.py  core.py
src/py/tfa/summary/: summary.py
superbuild/: CMakeLists.txt  External_eigen.cmake  External_xlint.cmake
